--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "homepage": "https://plateupplanner.github.io",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -24,7 +25,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "zustand": "^4.1.1"
   },
@@ -41,6 +41,7 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -48,6 +49,9 @@
     "npm-check-updates": "^16.2.1",
     "prettier": "^2.7.1",
     "typescript": "^4.8.3",
+    "vite": "^4.1.4",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5",
     "web-vitals": "^3.0.2"
   },
   "eslintConfig": {
